array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  	var x:Int = 0
  	var L:List[Int]= List()
  	val n = num.length
  	for (i <- 0 to (n-1)) {
      	if (num(i) != 0)
      			()
      	else if (isEmpty(L) || num(i)>head(L))
      			L = List(num(i)):::L
      	else if (num(i) == head(L)-1) {
          x = x+1
          L=tail(L)
          	
        }
      	

      			
    }
  	
}
